# encore

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  README.md  baseregain.h  bootstrap.sh  configure.ac  encore.cpp  intregain.cpp  intregain.h  regain.cpp  regain.h  snprank.cpp  snprank.h
m4/: boost.m4
